akmebank-ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akmebank-ui
  namespace: thinkdemo
spec:
  selector:
    app: akmebank-ui-selector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
